# CS-386C-Group-Membership-Drone-Show

./: .gitignore  CMakeLists.txt  Readme.md  project_dump.bat  report.tex
include/config/: SimulationConfig.h
include/control/: AssignmentStrategy.h  Controller.h  FormationPattern.h
include/core/: Drone.h  RNG.h  Simulation.h  Types.h
include/membership/: MemberInfo.h  MembershipState.h  Types.h
include/network/: Message.h  NetworkSimulator.h
include/util/: Logger.h
include/visualization/: PacketVis.h  PolyscopeRenderer.h
src/: main.cpp
src/control/: AssignmentStrategy.cpp  Controller.cpp  FormationPattern.cpp  ImageOutline.cpp
src/core/: Drone.cpp  Simulation.cpp
src/membership/: MembershipState.cpp
src/network/: NetworkSimulator.cpp
src/visualization/: PolyscopeRenderer.cpp
tests/: FormationAssignmentHarness.cpp  FormationPermutationTest.cpp  MembershipReconfigHarness.cpp  NeighborhoodSurveillanceTests.cpp  ShapeInterpolationTest.cpp
